Merge AggregateEntityNotFoundException into ChildEntityNotFoundException